lab2/services/service_js/service-js-1/service-js-1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-js-1-deployment
spec:
  replicas: 1                      # кількість екземплярів Pod, що буде створено цим Deployment
  selector:
    matchLabels:
      app: service-js-1
  template:
    metadata:
     labels:
       app: service-js-1             # мітка Pod по якому вона буде зв'язана з Deployment та Service
    spec:
      containers:
        - image: avovchenko01/service-js-1
          imagePullPolicy: Never
          name: service-js-1          # ім'я контейнеру
          ports:
            - containerPort: 8080  # порт по якому можна звертатись до поди

---

apiVersion: v1
kind: Service
metadata:
  name: service-js-1-service
spec:
  ports:
    - port: 80         # порт по якому можна звератись до сервісу
      targetPort: 8080 # порт контейнера
  selector:
    app: service-js-1      # селектор, всі Pod з даним селектором, будуть підключені до даного сервісу
