lab2/services/service_js/service-js-1/istio-virtual-js-1.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: service1-virtual
spec:
  hosts:
    - service-js-1-service # ім'я Service до якого застосовується налаштування
  http:
    - route:
        - destination:
            host: service-js-1-service # ім'я Service до якого застосовується налаштування
      timeout: 5s
      retries:
        attempts: 3
        retryOn: 5xx
        perTryTimeout: 5s
